-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 9
-
Component/s: core-libs
-
b120
-
Verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8227950 | openjdk8u232 | Andrew Hughes | P3 | Resolved | Fixed | b01 |
| JDK-8227800 | openjdk8u222 | Andrew Hughes | P3 | Resolved | Fixed | b09 |
| JDK-8227911 | openjdk7u | Andrew Hughes | P3 | Resolved | Fixed | master |
Internal CCC review recommended that the Objects.checkIndex supporting exception customization be either removed or moved internally on the premise of "Your Not Gonna Need It".
Code in the JDK switching to these methods arguably needs the advanced functionality to preserve exception types and their messages (some of the functionality is required regardless to produce clear exception messages for the all the check methods with the default IndexOutOfBoundsException).
The expedient approach here is to move internally and revisit.
Code in the JDK switching to these methods arguably needs the advanced functionality to preserve exception types and their messages (some of the functionality is required regardless to produce clear exception messages for the all the check methods with the default IndexOutOfBoundsException).
The expedient approach here is to move internally and revisit.
- backported by
-
JDK-8227800 Move Objects.checkIndex BiFunction accepting methods to an internal package
-
- Resolved
-
-
JDK-8227911 Move Objects.checkIndex BiFunction accepting methods to an internal package
-
- Resolved
-
-
JDK-8227950 Move Objects.checkIndex BiFunction accepting methods to an internal package
-
- Resolved
-
- relates to
-
JDK-8244293 Remove outdated @apiNote in java.util.Objects
-
- Closed
-