8155794: Move Objects.checkIndex BiFunction accepting methods to an internal package

Reviewed-by: shade, vlivanov